	* Fixed password echoing on MinTTY (#4128).
	* Added a new solver flag, '--install-base-libraries', that allows
	any package to be installed or upgraded (#4209).
	* New 'cabal-install' command: 'outdated', for listing outdated
	version bounds in a .cabal file or a freeze file (#4207).
	* Added qualified constraints for setup dependencies. For example,
	--constraint="foo:setup.bar == 1.0" constrains foo's setup dependency
	on bar (part of #3502).
	* Non-qualified constraints, such as --constraint="bar == 1.0", now
	only apply to top-level dependencies. They don't constrain setup or
	build-tool dependencies. The new syntax --constraint="any.bar == 1.0"
	constrains all uses of bar.

1.24.0.0 Ryan Thomas <ryan@ryant.org> March 2016
	* If there are multiple remote repos, 'cabal update' now updates
	them in parallel (#2503).
	* New 'cabal upload' option '-P'/'--password-command' for reading
	Hackage password from arbitrary program output (#2506).
	* Better warning for 'cabal run' (#2510).
	* 'cabal init' now warns if the chosen package name is already
	registered in the source package index (#2436).
	* New 'cabal install' option: '--offline' (#2578).
	* Accept 'builddir' field in cabal.config (#2484)
	* Read 'builddir' option from 'CABAL_BUILDDIR' environment variable.
	* Remote repos may now be configured to use https URLs. This uses
	either curl or wget or, on Windows, PowerShell, under the hood (#2687).
	* Install target URLs can now use https e.g. 'cabal install
	https://example.com/foo-1.0.tar.gz'.
	* Automatically use https for cabal upload for the main
	hackage.haskell.org (other repos will use whatever they are
	configured to use).
	* Support for dependencies of custom Setup.hs scripts
	(see http://www.well-typed.com/blog/2015/07/cabal-setup-deps/).
	* 'cabal' program itself now can be used as an external setup
	method. This fixes an issue when Cabal version mismatch caused
	unnecessary reconfigures (#2633).